--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -12,7 +12,7 @@ body {
         border: 0px solid #000;
         background-color: #081c15;
         font-family: Arial, Helvetica, sans-serif;
-        background-image: linear-gradient(rgba(1,50,32,1), #202843);
+        background-image: linear-gradient(#2d6a4f, #081c15);
 }
 
 footer {
@@ -22,7 +22,7 @@ footer {
 }
 
 .navbar {
-        background-color: #43291f;
+        background-color: #081c15;
         border: 1px solid #fffaec;
         border-radius: 2px;
         box-shadow: 0px 8px 8px 8px rgba(0, 0, 0, 0.2);
@@ -37,14 +37,14 @@ footer {
 .top-level-navbar > li {
         position: relative;
         float: left;
-        height: 30px;
+        height: 35px;
         width: 150px;
-        background: #43291f;
+        background: #081c15;
         text-align: left;
 }
 
 .top-level-navbar > li:hover {
-        background: #a68a64;
+        background: #2d6a4f;
 }
 
 .top-level-navbar li:hover > ul {
@@ -55,18 +55,18 @@ footer {
     font: Arial, Helvetica, sans-serif;
     color: #fffaec;
     text-decoration: none;
-    padding: 0 0 0 10px;
+    padding: 2px 8px;
     display: block;
     line-height: 30px;
 }
 
 .top-level-navbar a:hover { 
-        color: #000000; 
+        color: #fffaec; 
 }
 
 .second-level-navbar {
     position: absolute;
-    top: 30px;
+    top: 35px;
     left: 0;
     width: 149px;
     list-style: none;
@@ -80,11 +80,11 @@ footer {
 
 .second-level-navbar > li {
     position: relative;
-    height: 30px;
-    background: #43291f;
+    height: 35px;
+    background: #081c15;
 }
 .second-level-navbar > li:hover { 
-        background: #a68a64; 
+        background: #2d6a4f; 
 }
 
 .third-level-navbar {
@@ -102,12 +102,12 @@ footer {
 }
 
 .third-level-navbar > li {
-    height: 30px;
-    background: #43291f;
+    height: 35px;
+    background: #081c15;
 }
 
 .third-level-navbar > li:hover { 
-        background: #a68a64; 
+        background: #2d6a4f; 
 }
 
 
@@ -215,7 +215,7 @@ footer {
         padding: 8px;
         text-align: justify;
         text-justify: inter-word;
-        color: #002919;
+        color: #081c15;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         border: 0px solid #43291f;
         border-radius: 5px;
@@ -227,7 +227,7 @@ footer {
         padding: 8px;
         text-align: justify;
         text-justify: inter-word;
-        color: #002919;
+        color: #081c15;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         border: 0px solid #43291f;
         border-radius: 4px;
@@ -244,7 +244,7 @@ footer {
 .content {
         text-align: justify;
         text-justify: inter-word;
-        color: #002919;
+        color: #081c15;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         border: 0px solid #43291f;
         border-radius: 2px;
@@ -322,13 +322,13 @@ footer {
 h1 {
         font-family: Arial, Helvetica, sans-serif;
         text-align: left;
-        color: #002919;
+        color: #081c15;
         font-size: 4ch;
 }
 
 h2 {
         font-family: Arial, Helvetica, sans-serif;
         text-align: left;
-        color: #002919;
+        color: #081c15;
         font-size: 3ch;
 }
