--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -25,16 +25,17 @@ footer {
 
 .navbar {
         background-color: #081c15;
-        border: 1px solid #fffaec;
+        border: 0px solid #081c15;
         border-radius: 2px;
-        box-shadow: 0px 8px 8px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 32px 8px #081c15;
         font-family: 'Montserrat', sans-serif;
 }
 
 .top-level-navbar {
         list-style: none;
-        padding: 0;
+        padding-left: 32px;
         margin: 0;
+        border: 0px solid #081c15;
 }
 
 .top-level-navbar > li {
@@ -71,14 +72,14 @@ footer {
     position: absolute;
     top: 35px;
     left: 0;
-    width: 149px;
+    width: 150px;
     list-style: none;
     padding: 0;
     margin: 0;
     display: none;
-    border: 1px solid #fffaec;
+    border: 0px solid #fffaec;
     border-radius: 2px;
-    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 32px 8px #081c15;
 }
 
 .second-level-navbar > li {
@@ -92,16 +93,16 @@ footer {
 
 .third-level-navbar {
     position: absolute;
-    top: -1px;
-    right: -352px;
+    top: 0px;
+    right: -350px;
     width: 350px;
     list-style: none;
     padding: 0;
     margin: 0;
     display: none;
-    border: 1px solid #fffaec;
+    border: 0px solid #fffaec;
     border-radius: 2px;
-    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 32px 8px #081c15;
 }
 
 .third-level-navbar > li {
@@ -207,9 +208,9 @@ footer {
         padding-left: 32px;
         padding-right: 16px;
         background-color: #ffffff;
-        border: 1px solid #43291f;
+        border: 1px solid #081c15;
         border-radius: 2px;
-        box-shadow: 0px 8px 8px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 32px 8px #081c15;
         background-image: linear-gradient(#fffaec, #ffffff);
 }
 
@@ -270,8 +271,10 @@ footer {
         box-shadow: 1px 2px 0px 0px #43291f;
         padding-left: 8px;
         font-size: 12px;
-        background-image: linear-gradient(to left,#dde5b6, #fffaec);
-        font-family: "Montserrat", Arial, Helvetica, sans-serif;
+        color: #fffaec;
+        background-color: #fffaec;
+        background-image: linear-gradient(to right,#2d6a4f, #fffaec);
+        font-family: 'Montserrat', sans-serif;
 }
 
 .row {
