--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -261,7 +261,7 @@ footer {
 .list {
         margin-left: 40px;
         list-style: square;
-        color: #43291f;
+        color: #081c15;
 }
 
 .paragraphtab {
@@ -269,9 +269,9 @@ footer {
 }
 
 .sitenav {
-        border: 1px solid #43291f;
+        border: 1px solid #081c15;
         border-radius: 3px;
-        box-shadow: 1px 2px 0px 0px #43291f;
+        box-shadow: 1px 2px 0px 0px #081c15;
         padding-left: 0px;
         font-size: 12px;
         text-align: center;
@@ -283,21 +283,21 @@ footer {
 
 .row {
         display: flex;
-        color: #43291f;
+        color: #081c15;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .column1 {
         flex: auto;
         max-width: 320px;
-        border: 0px solid #43291f;
+        border: 0px solid #081c15;
         border-radius: 5px;
 }
 
 .column2 {
         flex: auto;
         padding-top: 8px;
-        border: 0px solid #43291f;
+        border: 0px solid #081c15;
         border-radius: 5px;
 }
 
@@ -309,15 +309,15 @@ footer {
 
 .image {
         text-align: left;
-        border: 1px solid #43291f;
-        box-shadow: 1px 2px 0px 0px #43291f;
+        border: 1px solid #081c15;
+        box-shadow: 1px 2px 0px 0px #081c15;
         margin-left: 1px;
 }
 
 .imagehomeleft {
         float: left;
-        border: 1px solid #43291f;
-        box-shadow: 1px 2px 0px 0px #43291f;
+        border: 1px solid #081c15;
+        box-shadow: 1px 2px 0px 0px #081c15;
         margin-top: 0px;
         margin-bottom: 0px;
         margin-left: 0px;
