--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -24,6 +24,7 @@ footer {
 }
 
 .navbar {
+        z-index: 1;
         background-color: #081c15;
         border: 0px solid #081c15;
         border-radius: 2px;
@@ -328,6 +329,7 @@ footer {
         float: right;
         margin-top: 8px;
         margin-bottom: 8px;
+        
 }
 
 h1 {
