--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -288,6 +288,20 @@ footer {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.columngallery1 {
+        flex: auto;
+        max-width: 600px;
+        border: 0px solid #081c15;
+        border-radius: 5px;
+}
+
+.columngallery2 {
+        flex: auto;
+        padding-top: 8px;
+        border: 0px solid #081c15;
+        border-radius: 5px;
+}
+
 .column1 {
         flex: auto;
         max-width: 320px;
@@ -344,4 +358,119 @@ h2 {
         text-align: left;
         color: #081c15;
         font-size: 3ch;
+}
+
+.gallery  {
+        float: left;
+}
+
+.mySlides {
+        display: none;
+        position: relative;
+        z-index: 0;
+}
+
+img {
+        vertical-align: middle;
+}
+
+.slideshow-container {
+        max-width: 600px;
+        position: relative;
+        margin: 0;
+        box-shadow: 2px 4px 16px 2px #081c15;
+}
+
+.prev,
+.next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -22px;
+        color: #fffaec;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+}
+
+.next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+        background-color: #081c15;
+}
+
+.text {
+        background-color: #2d6a4f95;
+        color: #fffaec;
+        font-size: 15px;
+        padding: 8px 12px;
+        position: absolute;
+        bottom: 8px;
+        width: auto;
+        text-align: center;
+}
+
+.numbertext {
+        color: #fffaec;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+}
+
+.dot {
+        cursor: pointer;
+        height: 8px;
+        width: 8px;
+        margin: 0 2px;
+        background-color: #2d6a4f;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+        background-color: #081c15;
+}
+
+.fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+        opacity: .4
+  }
+  to {
+        opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+        opacity: .4
+  }
+  to {
+        opacity: 1
+  }
+}
+
+@media only screen and (max-width: 300px) {
+        .prev,
+        .next,
+        .text {
+        font-size: 11px
+  }
 }
