--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -610,7 +610,7 @@ img {
         .text {
                 font-size: 11px;
   }
-        .h1 {
+        h1 {
                 font-size: 8pt;
         }
 }
