--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -611,6 +611,6 @@ img {
                 font-size: 11px;
   }
         h1 {
-                font-size: 8pt;
+                font-size: 2ch;
         }
 }
