--- a/Style/navbar.css
+++ b/Style/navbar.css
@@ -108,7 +108,7 @@
     line-height: 1;
   }
   
-  @media only screen and (max-width: 37.5em) and (min-width: 37.5em) {
+  @media only screen and (max-width: 1080px) and (min-width: 1080px) {
     #menu li {
       width: 33.333%;
     }
@@ -118,7 +118,7 @@
     }
   }
   
-  @media only screen and (min-width: 37.5em) {
+  @media only screen and (min-width: 1080px) {
     #menu .main-menu {
       display: block;
     }
